k8s/traefik/traefik-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-api-ingress
  namespace: traefik
spec:
  routes:
  - match: Host(`todo-traefik.cscms.me`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    kind: Rule
    middlewares:
    - name: admin-basic-auth
      namespace: traefik
    services:
    - name: api@internal
      kind: TraefikService
  # tls:
  #   secretName: ingress-tls
  #   domains: 
  #   - main: traefik.localhost
